--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,42 +1,37 @@
-name: Deploy Angular App to S3 Bucket
+# This is the name of your workflow, it will appear this way in the Actions tab of your GitHub repository
+name: CI/CD
 
+# Defines when the workflow will run
 on:
+  # The workflow will run every time a push is made to the develop branch
   push:
     branches: [main]
-
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-          
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: npm ci
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
 
-      - name: Build Angular app
-        run: ng build --configuration production
+    - name: Install dependencies
+      run: npm install
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1 
+    - name: Build
+      run: npm run build:prod
 
-   
-      - name: Deploy
-        run: |
-         aws s3 sync dist/mclean-p1-frontend s3://mclean-p1-frontend
-         echo "AWS CLI exit code: $?"
-         aws s3 ls s3://mclean-p1-frontend
+    - name: Deploy
+      if: success()
+      run: aws s3 sync ./dist/mclean-p1-frontend s3://mclean-p1-frontend
